<resources>
    <string name="app_name">Digital Medical Representative</string>
    <string name="doctor">Doctor</string>
    <string name="medical_representative">Medical Representative</string>
    <string name="welcome">Welcome</string>
    <string name="registration_certificate">Select Clinic/hospital Registration Certificate Pic</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="address">Street Address</string>
    <string name="cnic_without_dashes">CNIC (without dashes)</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="otp_here">OTP here</string>
    <string name="city">City</string>
    <string name="title_activity_requests">RequestsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="filter_doctors">Filter Doctors</string>
    <string name="doctor_name">Doctor Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>