<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    android:elevation="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card_click"
        android:padding="20dp">
        <TextView
            android:id="@+id/docName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/doctor_name"
            android:layout_margin="5dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/docCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17.5sp"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/city"/>
        <TextView
            android:id="@+id/docPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17.5sp"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/phone_number"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>