<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_sign_up"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.SignUpDocActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="25dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp"
            android:orientation="vertical">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarSize="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:layout_marginBottom="20dp"
                        app:startIconDrawable="@drawable/ic_person">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/full_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:layout_marginBottom="20dp"
                        app:startIconDrawable="@drawable/ic_phone">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:maxLength="11"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cnic_without_dashes"
                        android:layout_marginBottom="20dp"
                        app:startIconDrawable="@drawable/ic_card">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/cnic"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:digits="1234567890"
                            android:maxLength="13"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:layout_marginBottom="20dp"
                        app:startIconDrawable="@drawable/ic_home">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textMultiLine"
                            android:minLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_address"
                        android:layout_marginBottom="20dp"
                        app:startIconDrawable="@drawable/ic_baseline_email_24">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:layout_marginBottom="20dp"
                        app:startIconDrawable="@drawable/ic_password"
                        app:passwordToggleEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:layout_marginBottom="20dp"
                        app:startIconDrawable="@drawable/ic_password"
                        app:passwordToggleEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/certImage"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/ic_image"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/registration_certificate" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/select_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cornerRadius="10dp"
                        android:backgroundTint="@color/green"
                        android:text="@string/registration_certificate"
                        android:textColor="@color/black"
                        android:layout_margin="10dp"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cornerRadius="10dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/black"
                        android:layout_margin="10dp"
                        android:padding="10dp"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>