<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".activities.SelectUserActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="15dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                android:layout_marginVertical="15dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/med_rep"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_height="wrap_content"
            android:text="@string/medical_representative"
            android:textColor="@color/black"
            android:textSize="17.5sp"
            android:backgroundTint="@color/pink"
            android:padding="17.5dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doctor"
            android:layout_marginHorizontal="50dp"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="17.5sp"
            android:padding="17.5dp"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>