<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DashboardDoctorActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="24dp"
            app:cardBackgroundColor="@color/blue">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="5dp"

                android:orientation="vertical">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:layout_marginVertical="10dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:layout_marginVertical="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:layout_marginVertical="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/logout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_green"
                        android:text="logout"
                        android:layout_margin="15dp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/card">
            <TableRow>
                <androidx.cardview.widget.CardView
                    android:id="@+id/request"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    android:layout_margin="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp"
                        android:background="@drawable/card_click">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:src="@drawable/request" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Requests"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="17.5sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>
            <TableRow>
                <androidx.cardview.widget.CardView
                    android:id="@+id/message"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    android:layout_margin="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp"
                        android:orientation="vertical"
                        android:background="@drawable/card_click">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:src="@drawable/messages" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Messages"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="17.5sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</ScrollView>